Update pom.xml and used dependencies. Rework all test for JUnit 5