@@ -1,6 +1,5 @@
 package net.thumbtack.hospital.daoimpl;
 
-import net.thumbtack.hospital.dtorequest.schedule.DtoRequestWithSchedule;
 import net.thumbtack.hospital.model.schedule.ScheduleCell;
 import net.thumbtack.hospital.model.schedule.TimeCell;
 import net.thumbtack.hospital.model.ticket.Ticket;
@@ -8,8 +7,8 @@ import net.thumbtack.hospital.model.ticket.TicketToDoctor;
 import net.thumbtack.hospital.model.user.Doctor;
 import net.thumbtack.hospital.model.user.Patient;
 import net.thumbtack.hospital.util.ScheduleGenerators;
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
 
 import java.time.LocalDate;
 import java.time.LocalTime;
@@ -22,75 +21,76 @@ public class ScheduleDaoTest extends DaoTestApi {
                 "Ивсталия", "Валерьевна", "Максимова", "205", "Surgeon", Collections.emptyList());
         insertUser(doctor);
 
-        int duration = 30;
-        int durationPerDay = 5;
-        int doctorId = doctor.getId();
-        List<Integer> weekDays = Arrays.asList(1, 2, 3, 4, 5);
-        LocalDate dateStart = LocalDate.of(2020, 3, 1);
-        LocalDate dateEnd = dateStart.plusMonths(1);
-        LocalTime timeStart = LocalTime.of(12, 0);
-        LocalTime timeEnd = timeStart.plusMinutes(duration * durationPerDay);
+        final var duration = 30;
+        final var durationPerDay = 5;
+        final var doctorId = doctor.getId();
+        final var weekDays = List.of(1, 2, 3, 4, 5);
+        final var dateStart = LocalDate.of(2020, 3, 1);
+        final var dateEnd = dateStart.plusMonths(1);
+        final var timeStart = LocalTime.of(12, 0);
+        final var timeEnd = timeStart.plusMinutes(duration * durationPerDay);
 
-        DtoRequestWithSchedule requestWithSchedule = ScheduleGenerators.generateDtoRequestWithWeekSchedule(duration,
+        final var requestWithSchedule = ScheduleGenerators.generateDtoRequestWithWeekSchedule(duration,
                 dateStart, dateEnd, timeStart, timeEnd, weekDays);
 
-        List<ScheduleCell> schedule = ScheduleGenerators.generateSchedule(doctorId, requestWithSchedule);
+        final var schedule = ScheduleGenerators.generateSchedule(doctorId, requestWithSchedule);
         insertSchedule(doctorId, schedule);
     }
 
-    @Test(expected = RuntimeException.class)
+    @Test
     public void tryInsertScheduleForIncorrectDoctorId() {
-        int duration = 30;
-        int durationPerDay = 5;
-        int incorrectDoctorId = -2;
-        List<Integer> weekDays = Arrays.asList(1, 2, 3, 4, 5);
-        LocalDate dateStart = LocalDate.of(2020, 3, 1);
-        LocalDate dateEnd = dateStart.plusMonths(1);
-        LocalTime timeStart = LocalTime.of(12, 0);
-        LocalTime timeEnd = timeStart.plusMinutes(duration * durationPerDay);
+        final var duration = 30;
+        final var durationPerDay = 5;
+        final var incorrectDoctorId = -2;
+        final var weekDays = List.of(1, 2, 3, 4, 5);
+        final var dateStart = LocalDate.of(2020, 3, 1);
+        final var dateEnd = dateStart.plusMonths(1);
+        final var timeStart = LocalTime.of(12, 0);
+        final var timeEnd = timeStart.plusMinutes(duration * durationPerDay);
 
-        DtoRequestWithSchedule requestWithSchedule = ScheduleGenerators.generateDtoRequestWithWeekSchedule(duration,
+        final var requestWithSchedule = ScheduleGenerators.generateDtoRequestWithWeekSchedule(duration,
                 dateStart, dateEnd, timeStart, timeEnd, weekDays);
 
-        List<ScheduleCell> schedule = ScheduleGenerators.generateSchedule(incorrectDoctorId, requestWithSchedule);
-        insertSchedule(incorrectDoctorId, schedule);
+        final var schedule = ScheduleGenerators.generateSchedule(incorrectDoctorId, requestWithSchedule);
+
+        Assertions.assertThrows(RuntimeException.class, () -> insertSchedule(incorrectDoctorId, schedule));
     }
 
-    @Test(expected = RuntimeException.class)
+    @Test
     public void tryInsertEmptyScheduleTest() {
-        Doctor doctor = new Doctor("IvstaliyaMaksimova821", "VMWr9LVh5dVI",
+        final var doctor = new Doctor("IvstaliyaMaksimova821", "VMWr9LVh5dVI",
                 "Ивсталия", "Валерьевна", "Максимова", "205", "Surgeon", Collections.emptyList());
         insertUser(doctor);
 
-        insertSchedule(doctor.getId(), Collections.emptyList());
+        Assertions.assertThrows(RuntimeException.class, () -> insertSchedule(doctor.getId(), Collections.emptyList()));
     }
 
     @Test
     public void editScheduleTest1() {
-        Doctor doctor = new Doctor("IvstaliyaMaksimova821", "VMWr9LVh5dVI",
+        final var doctor = new Doctor("IvstaliyaMaksimova821", "VMWr9LVh5dVI",
                 "Ивсталия", "Валерьевна", "Максимова", "205", "Surgeon", Collections.emptyList());
         insertUser(doctor);
 
-        int doctorId = doctor.getId();
-        int duration = 10;
-        int durationPerDay = 20;
-        List<Integer> weekDays = Arrays.asList(1, 3);
-        LocalDate dateStart = LocalDate.of(2020, 3, 1);
-        LocalDate dateEnd = dateStart.plusMonths(1);
-        LocalTime timeStart = LocalTime.of(8, 0);
-        LocalTime timeEnd = timeStart.plusMinutes(duration * durationPerDay);
+        final var doctorId = doctor.getId();
+        var duration = 10;
+        var durationPerDay = 20;
+        var weekDays = List.of(1, 3);
+        var dateStart = LocalDate.of(2020, 3, 1);
+        var dateEnd = dateStart.plusMonths(1);
+        var timeStart = LocalTime.of(8, 0);
+        var timeEnd = timeStart.plusMinutes(duration * durationPerDay);
 
-        DtoRequestWithSchedule requestWithSchedule = ScheduleGenerators.generateDtoRequestWithWeekSchedule(duration,
+        var requestWithSchedule = ScheduleGenerators.generateDtoRequestWithWeekSchedule(duration,
                 dateStart, dateEnd, timeStart, timeEnd, weekDays);
 
-        List<ScheduleCell> schedule = ScheduleGenerators.generateSchedule(doctorId, requestWithSchedule);
+        var schedule = ScheduleGenerators.generateSchedule(doctorId, requestWithSchedule);
         insertSchedule(doctorId, schedule);
 
         // Editing schedule test
 
         duration = 15;
         durationPerDay = 18;
-        weekDays = Arrays.asList(1, 4, 5);
+        weekDays = List.of(1, 4, 5);
         dateStart = dateStart.plusDays(5);
         timeStart = LocalTime.of(9, 30);
         timeEnd = timeStart.plusMinutes(duration * durationPerDay);
@@ -98,36 +98,36 @@ public class ScheduleDaoTest extends DaoTestApi {
         requestWithSchedule = ScheduleGenerators.generateDtoRequestWithWeekSchedule(duration,
                 dateStart, dateEnd, timeStart, timeEnd, weekDays);
 
-        List<ScheduleCell> newSchedule = ScheduleGenerators.generateSchedule(doctorId, requestWithSchedule);
+        var newSchedule = ScheduleGenerators.generateSchedule(doctorId, requestWithSchedule);
         editSchedule(doctorId, dateStart, dateEnd, newSchedule);
     }
 
     @Test
     public void editScheduleTest2() {
-        Doctor doctor = new Doctor("IvstaliyaMaksimova821", "VMWr9LVh5dVI",
+        final var doctor = new Doctor("IvstaliyaMaksimova821", "VMWr9LVh5dVI",
                 "Ивсталия", "Валерьевна", "Максимова", "205", "Surgeon", Collections.emptyList());
         insertUser(doctor);
 
-        int doctorId = doctor.getId();
-        int duration = 10;
-        int durationPerDay = 20;
-        List<Integer> weekDays = Arrays.asList(1, 3);
-        LocalDate dateStart = LocalDate.of(2020, 3, 1);
-        LocalDate dateEnd = dateStart.plusMonths(1);
-        LocalTime timeStart = LocalTime.of(8, 0);
-        LocalTime timeEnd = timeStart.plusMinutes(duration * durationPerDay);
+        final var doctorId = doctor.getId();
+        var duration = 10;
+        var durationPerDay = 20;
+        var weekDays = List.of(1, 3);
+        var dateStart = LocalDate.of(2020, 3, 1);
+        var dateEnd = dateStart.plusMonths(1);
+        var timeStart = LocalTime.of(8, 0);
+        var timeEnd = timeStart.plusMinutes(duration * durationPerDay);
 
-        DtoRequestWithSchedule requestWithSchedule = ScheduleGenerators.generateDtoRequestWithWeekSchedule(duration,
+        var requestWithSchedule = ScheduleGenerators.generateDtoRequestWithWeekSchedule(duration,
                 dateStart, dateEnd, timeStart, timeEnd, weekDays);
 
-        List<ScheduleCell> schedule = ScheduleGenerators.generateSchedule(doctorId, requestWithSchedule);
+        var schedule = ScheduleGenerators.generateSchedule(doctorId, requestWithSchedule);
         insertSchedule(doctorId, schedule);
 
         // Editing schedule test
 
         duration = 15;
         durationPerDay = 18;
-        weekDays = Arrays.asList(1, 4, 5);
+        weekDays = List.of(1, 4, 5);
         dateStart = dateStart.plusDays(5);
         dateEnd = dateEnd.minusDays(10);
         timeStart = LocalTime.of(9, 30);
@@ -136,107 +136,107 @@ public class ScheduleDaoTest extends DaoTestApi {
         requestWithSchedule = ScheduleGenerators.generateDtoRequestWithWeekSchedule(duration,
                 dateStart, dateEnd, timeStart, timeEnd, weekDays);
 
-        List<ScheduleCell> newSchedule = ScheduleGenerators.generateSchedule(doctorId, requestWithSchedule);
+        var newSchedule = ScheduleGenerators.generateSchedule(doctorId, requestWithSchedule);
         editSchedule(doctorId, dateStart, dateEnd, newSchedule);
     }
 
     @Test
     public void editScheduleTest3() {
-        Doctor doctor = new Doctor("IvstaliyaMaksimova821", "VMWr9LVh5dVI",
+        final var doctor = new Doctor("IvstaliyaMaksimova821", "VMWr9LVh5dVI",
                 "Ивсталия", "Валерьевна", "Максимова", "205", "Surgeon", Collections.emptyList());
         insertUser(doctor);
 
-        int doctorId = doctor.getId();
-        int duration = 10;
-        int durationPerDay = 20;
-        List<Integer> weekDays = Arrays.asList(1, 3);
-        LocalDate dateStart = LocalDate.of(2020, 3, 1);
-        LocalDate dateEnd = dateStart.plusMonths(1);
-        LocalTime timeStart = LocalTime.of(8, 0);
-        LocalTime timeEnd = timeStart.plusMinutes(duration * durationPerDay);
+        final var doctorId = doctor.getId();
+        var duration = 10;
+        var durationPerDay = 20;
+        var weekDays = List.of(1, 3);
+        var dateStart = LocalDate.of(2020, 3, 1);
+        var dateEnd = dateStart.plusMonths(1);
+        var timeStart = LocalTime.of(8, 0);
+        var timeEnd = timeStart.plusMinutes(duration * durationPerDay);
 
-        DtoRequestWithSchedule requestWithSchedule = ScheduleGenerators.generateDtoRequestWithWeekSchedule(duration,
+        var requestWithSchedule = ScheduleGenerators.generateDtoRequestWithWeekSchedule(duration,
                 dateStart, dateEnd, timeStart, timeEnd, weekDays);
 
-        List<ScheduleCell> schedule = ScheduleGenerators.generateSchedule(doctorId, requestWithSchedule);
+        var schedule = ScheduleGenerators.generateSchedule(doctorId, requestWithSchedule);
         insertSchedule(doctorId, schedule);
 
         // Editing schedule test
 
         duration = 15;
         durationPerDay = 15;
-        weekDays = Arrays.asList(4, 5);
+        weekDays = List.of(4, 5);
         timeStart = LocalTime.of(9, 30);
         timeEnd = timeStart.plusMinutes(duration * durationPerDay);
 
         requestWithSchedule = ScheduleGenerators.generateDtoRequestWithWeekSchedule(duration,
                 dateStart, dateEnd, timeStart, timeEnd, weekDays);
 
-        List<ScheduleCell> newSchedule = ScheduleGenerators.generateSchedule(doctorId, requestWithSchedule);
+        var newSchedule = ScheduleGenerators.generateSchedule(doctorId, requestWithSchedule);
         editSchedule(doctorId, dateStart, dateEnd, newSchedule);
     }
 
     @Test
     public void appointmentToDoctorTest() {
-        Doctor doctor = new Doctor("IvstaliyaMaksimova821", "VMWr9LVh5dVI",
+        final var doctor = new Doctor("IvstaliyaMaksimova821", "VMWr9LVh5dVI",
                 "Ивсталия", "Валерьевна", "Максимова", "205", "Surgeon", Collections.emptyList());
         insertUser(doctor);
 
-        int doctorId = doctor.getId();
-        int duration = 10;
-        int durationPerDay = 20;
-        List<Integer> weekDays = Arrays.asList(1, 3);
-        LocalDate dateStart = LocalDate.of(2020, 3, 1);
-        LocalDate dateEnd = dateStart.plusMonths(1);
-        LocalTime timeStart = LocalTime.of(8, 0);
-        LocalTime timeEnd = timeStart.plusMinutes(duration * durationPerDay);
+        final var doctorId = doctor.getId();
+        final var duration = 10;
+        final var durationPerDay = 20;
+        final var weekDays = List.of(1, 3);
+        final var dateStart = LocalDate.of(2020, 3, 1);
+        final var dateEnd = dateStart.plusMonths(1);
+        final var timeStart = LocalTime.of(8, 0);
+        final var timeEnd = timeStart.plusMinutes(duration * durationPerDay);
 
-        DtoRequestWithSchedule requestWithSchedule = ScheduleGenerators.generateDtoRequestWithWeekSchedule(duration,
+        final var requestWithSchedule = ScheduleGenerators.generateDtoRequestWithWeekSchedule(duration,
                 dateStart, dateEnd, timeStart, timeEnd, weekDays);
 
-        List<ScheduleCell> schedule = ScheduleGenerators.generateSchedule(doctorId, requestWithSchedule);
+        final var schedule = ScheduleGenerators.generateSchedule(doctorId, requestWithSchedule);
         insertSchedule(doctorId, schedule);
 
-        Patient patient = new Patient("LivovHristofor214", "jhVvj8dk7y3s",
+        final var patient = new Patient("LivovHristofor214", "jhVvj8dk7y3s",
                 "Христофор", "Львов", null, "kwumcftdtfyvyal@novaemail.com",
                 "г.Панино, ул. Театральная, дом 26, квартира 230", "86405477438");
         insertUser(patient);
 
-        List<TimeCell> cells = schedule.get((int) (Math.random() * schedule.size())).getCells();
-        String ticketTitle = cells.get((int) (Math.random() * cells.size())).getTitle();
+        final var cells = schedule.get((int) (Math.random() * schedule.size())).getCells();
+        final var ticketTitle = cells.get((int) (Math.random() * cells.size())).getTitle();
         appointmentToDoctor(patient.getId(), ticketTitle);
     }
 
     @Test
     public void denyTicketToDoctorTest() {
-        Doctor doctor = new Doctor("IvstaliyaMaksimova821", "VMWr9LVh5dVI",
+        final var doctor = new Doctor("IvstaliyaMaksimova821", "VMWr9LVh5dVI",
                 "Ивсталия", "Валерьевна", "Максимова", "205", "Surgeon", Collections.emptyList());
         insertUser(doctor);
 
-        int doctorId = doctor.getId();
-        int duration = 10;
-        int durationPerDay = 20;
-        List<Integer> weekDays = Arrays.asList(1, 3);
-        LocalDate dateStart = LocalDate.of(2020, 3, 1);
-        LocalDate dateEnd = dateStart.plusMonths(1);
-        LocalTime timeStart = LocalTime.of(8, 0);
-        LocalTime timeEnd = timeStart.plusMinutes(duration * durationPerDay);
+        final var doctorId = doctor.getId();
+        final var duration = 10;
+        final var durationPerDay = 20;
+        final var weekDays = List.of(1, 3);
+        final var dateStart = LocalDate.of(2020, 3, 1);
+        final var dateEnd = dateStart.plusMonths(1);
+        final var timeStart = LocalTime.of(8, 0);
+        final var timeEnd = timeStart.plusMinutes(duration * durationPerDay);
 
-        DtoRequestWithSchedule requestWithSchedule = ScheduleGenerators.generateDtoRequestWithWeekSchedule(duration,
+        final var requestWithSchedule = ScheduleGenerators.generateDtoRequestWithWeekSchedule(duration,
                 dateStart, dateEnd, timeStart, timeEnd, weekDays);
 
-        List<ScheduleCell> schedule = ScheduleGenerators.generateSchedule(doctorId, requestWithSchedule);
+        final var schedule = ScheduleGenerators.generateSchedule(doctorId, requestWithSchedule);
         insertSchedule(doctorId, schedule);
 
-        Patient patient = new Patient("LivovHristofor214", "jhVvj8dk7y3s",
+        final var patient = new Patient("LivovHristofor214", "jhVvj8dk7y3s",
                 "Христофор", "Львов", null, "kwumcftdtfyvyal@novaemail.com",
                 "г.Панино, ул. Театральная, дом 26, квартира 230", "86405477438");
         insertUser(patient);
 
-        List<TimeCell> cells = schedule.get((int) (Math.random() * schedule.size())).getCells();
-        String ticketTitle = cells.get((int) (Math.random() * cells.size())).getTitle();
+        final var cells = schedule.get((int) (Math.random() * schedule.size())).getCells();
+        final var ticketTitle = cells.get((int) (Math.random() * cells.size())).getTitle();
         appointmentToDoctor(patient.getId(), ticketTitle);
-        int patientId = patient.getId();
+        final var patientId = patient.getId();
 
         appointmentToDoctor(patientId, ticketTitle);
 
@@ -245,43 +245,43 @@ public class ScheduleDaoTest extends DaoTestApi {
 
     @Test
     public void getTicketsToDoctorTest() {
-        Doctor doctor = new Doctor("IvstaliyaMaksimova821", "VMWr9LVh5dVI",
+        final var doctor = new Doctor("IvstaliyaMaksimova821", "VMWr9LVh5dVI",
                 "Ивсталия", "Валерьевна", "Максимова", "205", "Surgeon", Collections.emptyList());
         insertUser(doctor);
 
-        int doctorId = doctor.getId();
-        int duration = 10;
-        int durationPerDay = 20;
-        List<Integer> weekDays = Arrays.asList(1, 3);
-        LocalDate dateStart = LocalDate.of(2020, 3, 1);
-        LocalDate dateEnd = dateStart.plusMonths(1);
-        LocalTime timeStart = LocalTime.of(8, 0);
-        LocalTime timeEnd = timeStart.plusMinutes(duration * durationPerDay);
+        final var doctorId = doctor.getId();
+        final var duration = 10;
+        final var durationPerDay = 20;
+        final var weekDays = List.of(1, 3);
+        final var dateStart = LocalDate.of(2020, 3, 1);
+        final var dateEnd = dateStart.plusMonths(1);
+        final var timeStart = LocalTime.of(8, 0);
+        final var timeEnd = timeStart.plusMinutes(duration * durationPerDay);
 
-        DtoRequestWithSchedule requestWithSchedule = ScheduleGenerators.generateDtoRequestWithWeekSchedule(duration,
+        final var requestWithSchedule = ScheduleGenerators.generateDtoRequestWithWeekSchedule(duration,
                 dateStart, dateEnd, timeStart, timeEnd, weekDays);
 
-        List<ScheduleCell> schedule = ScheduleGenerators.generateSchedule(doctorId, requestWithSchedule);
+        final var schedule = ScheduleGenerators.generateSchedule(doctorId, requestWithSchedule);
         insertSchedule(doctorId, schedule);
 
-        Patient patient = new Patient("LivovHristofor214", "jhVvj8dk7y3s",
+        final var patient = new Patient("LivovHristofor214", "jhVvj8dk7y3s",
                 "Христофор", "Львов", null, "kwumcftdtfyvyal@novaemail.com",
                 "г.Панино, ул. Театральная, дом 26, квартира 230", "86405477438");
         insertUser(patient);
 
-        int patientId = patient.getId();
-        Map<ScheduleCell, TimeCell> mappedSchedule = new HashMap<>();
+        final var patientId = patient.getId();
+        final var mappedSchedule = new HashMap<ScheduleCell, TimeCell>();
         TimeCell tempTimeCell;
 
-        for (ScheduleCell sc : schedule) {
+        for (var sc : schedule) {
             tempTimeCell = sc.getCells().get((int) (Math.random() * sc.getCells().size()));
             mappedSchedule.put(sc, tempTimeCell);
             appointmentToDoctor(patientId, tempTimeCell.getTitle());
         }
 
-        List<TicketToDoctor> expectedTicketsToDoctor = new ArrayList<>();
+        final var expectedTicketsToDoctor = new ArrayList<TicketToDoctor>();
 
-        for (ScheduleCell sc : mappedSchedule.keySet()) {
+        for (var sc : mappedSchedule.keySet()) {
             tempTimeCell = mappedSchedule.get(sc);
             expectedTicketsToDoctor.add(
                     new TicketToDoctor(tempTimeCell.getTitle(), doctor.getCabinet(), sc.getDate(), tempTimeCell.getTime(),
@@ -290,18 +290,18 @@ public class ScheduleDaoTest extends DaoTestApi {
         }
         expectedTicketsToDoctor.sort(Comparator.comparing(Ticket::getTitle));
 
-        List<TicketToDoctor> actualTicketsToDoctor = getTicketsToDoctor(patientId);
-        Assert.assertEquals(expectedTicketsToDoctor, actualTicketsToDoctor);
+        final var actualTicketsToDoctor = getTicketsToDoctor(patientId);
+        Assertions.assertEquals(expectedTicketsToDoctor, actualTicketsToDoctor);
     }
 
     @Test
     public void getEmptyTicketsListToDoctorTest() {
-        Patient patient = new Patient("LivovHristofor214", "jhVvj8dk7y3s",
+        final var patient = new Patient("LivovHristofor214", "jhVvj8dk7y3s",
                 "Христофор", "Львов", null, "kwumcftdtfyvyal@novaemail.com",
                 "г.Панино, ул. Театральная, дом 26, квартира 230", "86405477438");
         insertUser(patient);
 
-        List<TicketToDoctor> actualTickets = getTicketsToDoctor(patient.getId());
-        Assert.assertTrue(actualTickets.isEmpty());
+        final var actualTickets = getTicketsToDoctor(patient.getId());
+        Assertions.assertTrue(actualTickets.isEmpty());
     }
 }
